# Tuleap-Pet

./: .gitignore  .puppeteerrc.cjs  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts  vitest.integration.config.ts
.github/workflows/: ci.yml  integration-tuleap.yml  release-windows.yml
ci/: tuleap-compose.yml
docs/: architecture.md  backlog.md
docs/examples/: sprint-review-dark-example.md  sprint-review-example.md  sprint-review-story-slides-example.md  sprint-summary-prompt-example.md
docs/prompts/: admin_summary.md  slide_agenda.md  slide_avancement.md  (+17 more)
plans/: fix-generation-chatbot.md  fix-test-generator.md  git-tree-file-selection.md  select-files-for-test-generation.md  svn-integration-study.md  warning-corrector-git-tree.md
presentation/: Tuleap-AI-Companion.pptx  build-screens.js  deck.md  shoot.js
samples/cpp-demo/: CMakeLists.txt  CMakePresets.json  README.md  ai_compil.bat  ai_compil.sh
samples/cpp-demo/src/: calculator.cpp  calculator.h  strutil.cpp  strutil.h
samples/cpp-demo/tests/: CMakeLists.txt  test_calculator.cpp
scripts/: tuleap-bootstrap.sh
tests/: admin-summary.test.ts  auth-pkce.test.ts  chat-attachments.test.ts  chat-manager.test.ts  chat-tool-diagnostic.test.ts  chat-tools.test.ts  coder-context.test.ts  generation-pipeline.test.ts  jenkins-client.test.ts  jenkins-tools.test.ts  junit-parser.test.ts  llm-openrouter.test.ts  mappers.test.ts  marp-preview.test.ts  prompts.test.ts  ttm-exporter.test.ts  tuleap-client.test.ts
(+251 files in other folders)
